--- a/emma-open-source.html
+++ b/emma-open-source.html
@@ -69,6 +69,12 @@
 						</div>
 					</section>
 				</section>
+				<section>
+					<h2>Sponsoring für</h2>
+					<p class="fragment">Codesprints - Gemeinsames Programmieren mit konkreten Zielen</p>
+					<p class="fragment">Freelancing - Support und Weiterentwicklung</p>
+					<p class="fragment">Projektmanagement und Kommunikation</p>
+				</section>
 			</div>
 		</div>
 
