add logo to top right add logo and css class add favicons

--- a/emma-open-source.html
+++ b/emma-open-source.html
@@ -8,9 +8,10 @@
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="nca/css/nca.css">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="stylesheet" href="lib/css/zenburn.css">∆
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -20,8 +21,11 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
+		<link rel="shortcut icon" href="nca/img/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="nca/img/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
+		<a href="https://nevercodealone.de"><img class="logo" width="80" src="nca/img/logo.png"></a>
 		<div class="reveal">
 			<div class="slides">
 				<section>
