add SEO Title and description to emma talk

--- a/emma-open-source.html
+++ b/emma-open-source.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>EMMA - Open Source Übersetzungstool</title>
+		<title>EMMA - Open Source Übersetzungstool - AgularJS</title>
+		<meta name="description" content="Das mit Symfony4 und AngularJS entwickelte Tool hilft bei der Duisburger Tafel bei der Verständigung."/>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
