finished first otto sheet

--- a/otto-nca-event.html
+++ b/otto-nca-event.html
@@ -79,7 +79,7 @@
 					<br>
 					MOIA
 				</div>
-				<div class="text-left font-sixty-percent">
+				<div class="text-left font-fifty-percent">
 					<h2>Scala mit akka Framework</h2>
 					<b>Reichweite:</b>
 					<br>
@@ -145,53 +145,130 @@
 		</section>
 		<section>
 			<h2>Social Media Marketing</h2>
-			<div class="col font-sixty-percent">
+			<div>
 				<div class="col-3">
 					<h5>Facebook</h5>
 					<p>
-						<img src="nca-events/otto/Martin-Odersky.jpg" alt="Martin Odersky" width="180px"><br>
-						Martin Odersky
-						<br>
-						lead designer of Scala
-						<br>
-						<a href="https://twitter.com/odersky" target="_blank">@odersky</a>
-						47,2 Tsd. Follower
+						<div>
+							<div style="float: left">
+								<img src="nca-events/otto/scala-programming-language.jpg" alt="Scala Programming Language" width="50px"><br>
+							</div>
+							<div class="col font-fourtyfive-percent">
+								<a href="https://www.facebook.com/Scala-Programming-Language-356141961134513/?ref=br_rs" target="_blank">Scala Programming Language</a>
+								<br>
+								4.576 gefällt das - Community
+							</div>
+							<div style="clear: both"></div>
+						</div>
+						<div>
+							<div style="float: left">
+								<img src="nca-events/otto/scala.png" alt="Scala" width="50px"><br>
+							</div>
+							<div class="col font-fourtyfive-percent">
+								<a href="https://www.facebook.com/scalalanguage/?ref=br_rs" target="_blank">Scala</a>
+								<br>
+								2.257 gefällt das - Produkt / Dienstleistung
+							</div>
+							<div style="clear: both"></div>
+						</div>
+						<div>
+							<div style="float: left">
+								<img src="nca-events/otto/scala-programming-language-2.jpg" alt="Scala Programming Language" width="50px"><br>
+							</div>
+							<div class="col font-fourtyfive-percent">
+								<a href="https://www.facebook.com/search/str/scala+programming/keywords_pages" target="_blank">Scala Programming Language</a>
+								<br>
+								1.180 gefällt das - Community
+							</div>
+							<div style="clear: both"></div>
+						</div>
+						<div>
+							<div style="float: left">
+								<img src="nca-events/otto/webentwickler-interessierte.jpg" alt="Webentwickler und Interessierte" width="50px"><br>
+							</div>
+							<div class="col font-fourtyfive-percent">
+								<a href="https://www.facebook.com/groups/onlinedevelopers/" target="_blank">Webentwickler & Interessierte</a>
+								<br>
+								1.929 gefällt das - Community
+							</div>
+							<div style="clear: both"></div>
+						</div>
 					</p>
 				</div>
 				<div class="col-3">
 					<h5>Xing</h5>
 					<p>
-						<img src="nca-events/otto/jdegoes.jpg" alt="John De Goes" width="180px"><br>
-						John Ⓐ De Goes
-						<br>
-						Entrepreneur, functional programmer, OSS contributor, speaker, author. Work hard, stay positive, and live fearlessly.
-						<br>
-						<a href="https://twitter.com/jdegoes" target="_blank">@jdegoes</a>
-						7.699 Follower
+						<div>
+							<div style="float: left">
+								<img src="nca-events/otto/Scala-Digital-Sinage.png" alt="Scala Digital Sinage" width="50px"><br>
+							</div>
+							<div class="col font-fourtyfive-percent">
+								<a href="https://www.xing.com/communities/groups/scala-digital-signage-1953-1023968" target="_blank">Scala Digital Sinage</a>
+								<br>
+								297 Mitglieder
+							</div>
+							<div style="clear: both"></div>
+						</div>
+						<div>
+							<div style="float: left">
+								<img src="nca-events/otto/scala-xing.png" alt="Scala Xing" width="50px"><br>
+							</div>
+							<div class="col font-fourtyfive-percent">
+								<a href="https://www.xing.com/communities/groups/scala-1953-1060954" target="_blank">Scala</a>
+								<br>
+								1.369 Mitglieder
+							</div>
+							<div style="clear: both"></div>
+						</div>
 					</p>
 				</div>
 				<div class="col-3">
 					<h5>LinkedIn</h5>
 					<p>
-						<img src="nca-events/otto/unbekannt.jpg" alt="Martin Odersky" width="180px"><br>
-						In Recherche
-						<br>
-						Macht Dinge mit Scala
-						<br>
-						<a href="https://twitter.com/" target="_blank">@searching</a>
-						??? Follower
+						<div>
+							<div style="float: left">
+								<img src="nca-events/otto/scala-enthusists.png" alt="Scala Enthusiasts" width="50px"><br>
+							</div>
+							<div class="col font-fourtyfive-percent">
+								<a href="https://www.linkedin.com/groups/746917/profile" target="_blank">Scala Enthusiasts</a>
+								<br>
+								28.625 Mitglieder
+							</div>
+							<div style="clear: both"></div>
+						</div>
 					</p>
 				</div>
 			</div>
 		</section>
 		<section>
-			<h2>Wer wir sind?</h2>
-			<p class="fragment">Never Code Alone ist eine Community, die sich u.a. gegenseitig weiterbildet</p>
-			<p class="fragment">Wir vermitteln zwischen sozialen Einrichtungen und Programmierern</p>
-			<p class="fragment">Wir wollen aktuelle Technologien kurzfristig einsetzen</p>
+			<h2>YouTube Videos</h2>
+			<div class="col-3">
+				<h5>Management</h5>
+				<p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/7OnIqSg_N2s?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</p>
+			</div>
+			<div class="col-3">
+				<h5>Mitarbeiter</h5>
+				<p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/SEJiOHelEPQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</p>
+			</div>
+			<div class="col-3">
+				<h5>IT Management</h5>
+				<p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/uV1Zi2NYq5s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</p>
+			</div>
 		</section>
 		<section>
-			<h2>Was haben wir?</h2>
+			<h2>Wer wir sind?</h2>
+			<div class="font-seventy-percent">
+				<p>Never Code Alone will die Software-Qualität in Deutschland steigern</p>
+				<p>Wir setzen uns ein für kostenlose Weiterbildung und Schulungen</p>
+				<p>Wir bringen gute Arbeitgeber und motivierte Web Developer zusammen</p>
+				<p>Wir suchen gute Arbeitsbedigungen in der IT und glauben dran</p>
+			</div>
 		</section>
 		<section>
 			<section data-background="emma/need.gif" data-background-color="#000000">
@@ -202,9 +279,12 @@
 		</section>
 		<section>
 			<h2>Sponsoring für</h2>
-			<p class="fragment">Codesprints - Gemeinsames Programmieren mit konkreten Zielen</p>
-			<p class="fragment">Freelancing - Support und Weiterentwicklung</p>
-			<p class="fragment">Projektmanagement und Kommunikation</p>
+			<div class="font-seventy-percent">
+				<p>Social Media Support auf euren Kanälen</p>
+				<p>Einen echten USP für Arbeitnehmer, den wir rausstellen können</p>
+				<p>Gute Laune und einen netten Umgang</p>
+				<p>Vertrauen in unsere Arbeit</p>
+			</div>
 		</section>
 	</div>
 </div>
