--- a/otto-nca-event.html
+++ b/otto-nca-event.html
@@ -278,7 +278,7 @@
 			</section>
 		</section>
 		<section>
-			<h2>Sponsoring für</h2>
+			<h2>Einen Push zum Event</h2>
 			<div class="font-seventy-percent">
 				<p>Social Media Support auf euren Kanälen</p>
 				<p>Einen echten USP für Arbeitnehmer, den wir rausstellen können</p>
