add example link

--- a/otto-nca-event.html
+++ b/otto-nca-event.html
@@ -283,7 +283,8 @@
 				<p>Social Media Support auf euren Kanälen</p>
 				<p>Einen echten USP für Arbeitnehmer, den wir rausstellen können</p>
 				<p>Gute Laune und einen netten Umgang</p>
-				<p>Vertrauen in unsere Arbeit</p>
+				<p>Einen netten Rahmen für ein tolles Event</p>
+				<p><a href="https://nevercodealone.de/influencerdb/" target="_blank">Event-Page mit Ablufplan</a></p>
 			</div>
 		</section>
 	</div>
