add social target to otto

--- a/otto-nca-event.html
+++ b/otto-nca-event.html
@@ -86,7 +86,7 @@
 					<a href="https://twitter.com/markusjura">@markusjura</a> 429 Follower<br>
 					<a href="https://twitter.com/MOIAmobility" target="_blank">@MOIAmobility</a> 3.207 Follower<br>
 					<a href="https://www.meetup.com/de-DE/Scala-Hamburg/">Meetup Scala Hamburg</a> 531 Mitglieder
-					<br><br>∆
+					<br><br>
 					<b>Talks und YouTube</b>
 					<br>
 					<a href="https://www.slideshare.net/markusjura/grpc-with-scala-and-swift" target="_blank">gRPC with Scala and Swift</a><br>
@@ -260,12 +260,21 @@
 			</div>
 		</section>
 		<section>
-			<h2>Wer wir sind?</h2>
+			<h2>Never Code Alone?</h2>
 			<div class="font-seventy-percent">
-				<p>Never Code Alone will die Software-Qualität in Deutschland steigern</p>
+				<p>Wir wollen die Software-Qualität in Deutschland steigern</p>
 				<p>Wir setzen uns ein für kostenlose Weiterbildung und Schulungen</p>
 				<p>Wir bringen gute Arbeitgeber und motivierte Web Developer zusammen</p>
-				<p>Wir suchen gute Arbeitsbedigungen in der IT und glauben dran</p>
+				<p>Wir suchen gute Arbeitsbedigungen in der IT</p>
+			</div>
+		</section>
+		<section>
+			<h2>Soziale Projekte</h2>
+			<div class="font-seventy-percent">
+				<p>Für verbindliche Anmeldungen erheben wir eine Schutzgebühr, die freiwillig gespendet werden kann.</p>
+				<p>Diese kann von Sponsoren aufgerundet werden.</p>
+				<p>Duisburger Tafel, Deutsche Krebshilfe, Froschköinge e.V., Friedensdorf International, Mitmachkinder e.V.</p>
+				<p><b class="yellow">Summe: 3.700 Euro</b></p>
 			</div>
 		</section>
 		<section>
